# AutoLife

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: ci-pr-gate.yml  ci-strict-live-gate.yml
config/model/: BASE_OPS_SGD.json  BASE_RND_LGBM.json  BASE_RND_SGD.json  EXP_RND_GATENEXT_LGBM.json  EXP_RND_GATENEXT_SGD.json  EXP_RND_LGBM_AFFINE.json  EXP_RND_LGBM_PLATT.json  EXP_RND_LGBM_RND2_TOPK5.json  lgbm_tp1H20_123.sha256  probabilistic_feature_contract_v1.json  probabilistic_feature_contract_v2.json  probabilistic_runtime_bundle_v1.json  probabilistic_runtime_bundle_v2.json  probabilistic_runtime_bundle_v2_a19_margin_observe_only_step1.json  probabilistic_runtime_bundle_v2_r34_base_mid2.json  probabilistic_runtime_bundle_v2_r34_exec_cap_step1.json  probabilistic_runtime_bundle_v2_r44_cap_high_base.json  probabilistic_runtime_bundle_v2_r44_cap_high_corr_stronger.json
config/presets/: active.json  candidate_stage15_combo005.json  candidate_stage15_diverse_wide_013.json  candidate_stage15_edge_baseline_floor_sweep_004.json  candidate_stage15_quality_focus_002.json  legacy_fallback.json  safe.json
data/backtest/: simulation_large.csv
data/backtest_fresh_14d/: meta.json
data/backtest_fresh_5d/: meta.json
data/backtest_probabilistic/: probabilistic_bundle_manifest.json  probabilistic_split_manifest_v1.json
data/backtest_recent_7d_20260225/: probabilistic_bundle_manifest_recent_7d_20260225.json
docs/: 00_INDEX.md  10_BASELINE_IMPLEMENTED.md  11_BASELINE_RUNBOOK.md  20_API_POLICY_UPBIT.md  30_VALIDATION_GATES.md  40_DATA_MANIFEST_CONTRACT.md  41_FEATURE_CONTRACT.md  42_RUNTIME_BUNDLE_CONTRACT.md  50_EXTENSIONS_OVERVIEW.md  51_EXT_PURGED_WALKFORWARD.md  52_EXT_EVENT_SAMPLING.md  53_EXT_UNCERTAINTY_ENSEMBLE.md  54_EXT_CONDITIONAL_COST_MODEL.md  55_EXT_REGIME_SPEC.md  56_EXT_PHASE3_FRONTIER_EV_COST_DIAGNOSTICS.md  60_MODE_B_V2_RESTRUCTURE_PLAN.md  90_SECURITY_COMPLIANCE.md  ADAPTIVE_ARCHITECTURE_ROADMAP.md  ADAPTIVE_ENGINE_REBUILD_PLAN_2026-02-19.md  BACKTEST_REPRODUCTION_CHECKLIST.md  CHAPTER_CURRENT.md  CHAPTER_HISTORY_BRIEF.md  CONTEXT_RESET_HANDOFF_2026-02-13.md  CORE_MIGRATION_FINALIZATION_2026-02-15.md  DELETE_WAVE_MANIFEST.md  FILE_USAGE_MAP.md  FOUNDATION_ENGINE_STRATEGY_REVIEW_2026-02-19.md  LIVE_VALIDATION_CHECKLIST.md  NEXT_CONTEXT_DIRECTION_2026-02-13.md  PERSONAL_USE_NOTICE.md  PRE_DRYRUN_BACKTEST_VALIDATION.md  PROBABILISTIC_EXECUTION_ROADMAP_2026-02-21.md  PROBABILISTIC_HYBRID_TRANSITION_2026-02-20.md  REAL_TRADING_PLAN.md  REAL_TRADING_VALIDATION_REPORT.md  RND_GATENEXT_FULL_REBUILD_2026-03-02.md  STAGE15_GATE_FUNNEL_ANALYSIS_2026-02-14.md  STRATEGY_TUNING_REVIEW.md  STRICT_GATE_RUNBOOK_2026-02-13.md  TARGET_ARCHITECTURE.md  (+6 more)
docs/_codex/: ACTIVE_TICKET.md  BOOTSTRAP.md  CH01_PHASE3_CONTEXT.md  CH01_PHASE3_FINAL_DELIVERY_2026-02-25.md  CH01_PHASE4_CONTEXT.md  CONTEXT_REFRESH_PROTOCOL.md  CURRENT_STATE.md  MASTER_SPEC.md  PARITY_BOUNDARY.md  PHASE23_MIGRATION_CLEANUP_2026-02-25.md  PHASE2_CLOSURE_2026-02-25.md  PR_CHECKLIST.md  START_TO_EXIT_PATH_AUDIT_2026-02-25.md  TICKET_TEMPLATE.md  VERIFICATION_SCRIPT_AUDIT_2026-02-25.md  WORKSPACE_STRUCTURE_AUDIT_2026-02-25.md
docs/archive/: CHAPTER_CURRENT_FULLLOG_2026-02-20.md  README.md  SCRIPT_READING_TUNE_CANDIDATE_GATE_2026-02-19.md  STAGE15_WORKLOG_ARCHIVE_2026-02-16.md  TODO_STAGE15_EXECUTION_PLAN_2026-02-13_FULLLOG_2026-02-19.md  TUNE_CANDIDATE_GATE_LINE_AUDIT_2026-02-19.md
include/analytics/: MarketScanner.h  OrderbookAnalyzer.h  ProbabilisticRuntimeFeatures.h  ProbabilisticRuntimeModel.h  RegimeDetector.h  TechnicalIndicators.h
include/app/: BacktestCliHandler.h  BacktestInteractiveHandler.h  BacktestReportFormatter.h  LiveModeHandler.h
include/backtest/: BacktestEngine.h  DataHistory.h
include/common/: Config.h  ExecutionGuardPolicyShared.h  Logger.h  MarketDataWindowPolicy.h  PathUtils.h  Phase4PortfolioAllocator.h  ProbabilisticRegimeSpec.h  RuntimeDiagnosticsShared.h  SignalPolicyShared.h  StrategyEdgeStatsShared.h  TickSizeHelper.h  Types.h
include/engine/: AdaptivePolicyController.h  EngineConfig.h  IPolicyLearningPlane.h  PerformanceStore.h  PolicyLearningPlaneAdapter.h  TradingCycleCoordinator.h  TradingEngine.h
include/execution/: ExecutionPlaneAdapter.h  ExecutionUpdateSchema.h  IExecutionPlane.h  OrderManager.h  OrderStateMapper.h  RateLimiter.h
include/gate_vnext/: CandidateSnapshot.h  ExecutionGate.h  GateVNext.h  QualitySelector.h  (+2 more)
legacy_archive/: manifest.json
scripts/: _script_common.py  analyze_backtest_trade_transition.py  analyze_correctness_occupancy_drift.py  analyze_daily_oos_delta.py  analyze_dataset_hostility.py  analyze_entry_pattern_bias.ps1  analyze_entry_pattern_bias.py  analyze_entry_rejections.py  analyze_exit_reason_mapping_gap.py  analyze_loss_contributors.ps1  analyze_loss_contributors.py  analyze_policy_selection_drift.py  analyze_rescue_self_loop_context.py  analyze_root_cause_diagnostics.py  analyze_stagef2_exit_deep_dive.py  analyze_stagef_trade_deep_dive.py  analyze_step8b_tu_core_rescue_candidates.py  analyze_v12_rescue_transition_guard_candidates.py  analyze_v15_occupancy_distortion.py  apply_trading_preset.ps1  apply_trading_preset.py  assess_wave_b_readiness.py  audit_backtest_data.ps1  audit_backtest_data.py  build_dynamic_universe.py  build_fresh_backtest_dataset.py  build_live_entry_stage_funnel.py  build_probabilistic_feature_dataset.py  build_probabilistic_shadow_backtest_log.py  build_stageg3_dataset.py  build_time_split_datasets.py  build_trending_availability_audit.py  capture_baseline.ps1  capture_baseline.py  check_source_encoding.py  check_upbit_auth_status.py  collect_daily_oos_trade_profile.py  collect_strategyless_exit_audit.py  compare_execution_event_distribution.py  eval_ranging_shadow_edge.py  (+115 more)
src/: main.cpp
tests/: TestConfig.cpp  TestEventJournal.cpp  TestExecutionStateMachine.cpp  TestOrderStateMapper.cpp  TestProbabilisticRuntimeBundleContract.cpp  TestRateLimiterComplianceTelemetry.cpp  TestV2DecisionKernel.cpp  TestV2EngineBacktestScaffold.cpp  TestV2ShadowParity.cpp
(+148 files in other folders)
